Moved layer to own file, added deletion, but bug with layer below deleted not moving up

--- a/icons/icons.yaml
+++ b/icons/icons.yaml
@@ -6,4 +6,4 @@ add_layer:
 del_layer:
   desc: "Delete curret layer"
   iconPath: ".\\icons\\minus-circle.svg"
-  func: "placeholderFunction"
+  func: "deleteLayer"
